--- a/WayPointBasedlndoorNavigation/Base.lproj/Main.storyboard
+++ b/WayPointBasedlndoorNavigation/Base.lproj/Main.storyboard
@@ -413,10 +413,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Lgj-rS-oeX">
-                                        <rect key="frame" x="0.0" y="79" width="375" height="202.5"/>
+                                        <rect key="frame" x="0.0" y="79" width="375" height="212.5"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleAspectFit" layoutMarginsFollowReadableWidth="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ipZ-Ah-w14">
-                                                <rect key="frame" x="10" y="0.0" width="365" height="202.5"/>
+                                            <stackView opaque="NO" contentMode="scaleAspectFit" layoutMarginsFollowReadableWidth="YES" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ipZ-Ah-w14">
+                                                <rect key="frame" x="10" y="0.0" width="365" height="212.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Step" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C36-OD-5cz">
                                                         <rect key="frame" x="0.0" y="0.0" width="365" height="20"/>
@@ -428,20 +428,22 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7BP-gI-ns0">
-                                                        <rect key="frame" x="0.0" y="20" width="365" height="182.5"/>
+                                                        <rect key="frame" x="0.0" y="30" width="365" height="182.5"/>
                                                         <subviews>
-                                                            <stackView opaque="NO" contentMode="top" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2PR-v9-fK2" userLabel="ImageAndText">
+                                                            <stackView opaque="NO" contentMode="top" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2PR-v9-fK2" userLabel="ImageAndText">
                                                                 <rect key="frame" x="0.0" y="0.0" width="365" height="182.5"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MyW-JQ-x4S">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="182.5" height="182.5"/>
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bluetooth-search" translatesAutoresizingMaskIntoConstraints="NO" id="MyW-JQ-x4S">
+                                                                        <rect key="frame" x="0.0" y="26.5" width="130" height="130"/>
                                                                         <constraints>
+                                                                            <constraint firstAttribute="height" constant="130" id="KFp-lD-CoI"/>
+                                                                            <constraint firstAttribute="width" constant="130" id="Lrm-i6-5lb"/>
                                                                             <constraint firstAttribute="width" secondItem="MyW-JQ-x4S" secondAttribute="height" multiplier="1:1" id="gWJ-If-XQl"/>
                                                                         </constraints>
                                                                     </imageView>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vp0-FM-nwa">
-                                                                        <rect key="frame" x="182.5" y="73.5" width="182.5" height="36"/>
-                                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Please walk to the nearlist Lbeacon." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vp0-FM-nwa">
+                                                                        <rect key="frame" x="130" y="28.5" width="235" height="125.5"/>
+                                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="35"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
@@ -472,7 +474,7 @@
                                         </constraints>
                                     </view>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aQV-XO-V2Y">
-                                        <rect key="frame" x="0.0" y="286.5" width="375" height="131"/>
+                                        <rect key="frame" x="0.0" y="296.5" width="375" height="131"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="zaX-Ek-6AA">
                                                 <rect key="frame" x="10" y="0.0" width="365" height="131"/>
@@ -549,7 +551,7 @@
                                         </constraints>
                                     </view>
                                     <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Cz-Cz-jC0">
-                                        <rect key="frame" x="0.0" y="422.5" width="375" height="108.5"/>
+                                        <rect key="frame" x="0.0" y="432.5" width="375" height="98.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="OsL-mN-hwj">
@@ -625,6 +627,7 @@
                         <outlet property="imageTurnIndicator" destination="tKt-k1-AMe" id="pxS-pJ-xX2"/>
                         <outlet property="navGraph" destination="OsL-mN-hwj" id="J6e-FL-Mns"/>
                         <outlet property="nextStepBtn" destination="WPk-Pz-6VS" id="pPr-Vt-UVx"/>
+                        <outlet property="nextStepView" destination="aQV-XO-V2Y" id="eFB-jj-4sk"/>
                         <outlet property="nextTurnMovement" destination="OQS-gN-1vS" id="lEG-fh-hYI"/>
                         <outlet property="nowatLabel" destination="Zek-V9-6GM" id="IUj-FQ-rWG"/>
                         <outlet property="pointDisplay" destination="C4N-W3-umK" id="udF-dY-eIY"/>
@@ -881,6 +884,7 @@
     </scenes>
     <resources>
         <image name="alignment_line" width="250" height="40"/>
+        <image name="bluetooth-search" width="512" height="512"/>
         <image name="gear" width="32" height="32"/>
     </resources>
 </document>
